# algorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: doctest.h.0A17A8BDA413D3E8.idx  list.cpp.018E0927AA1BA2E8.idx  list.hpp.8CD6692B3FBC6DBF.idx  main.cpp.4BCAD0C5202E1FF6.idx  main.cpp.ED1F8624C68CF46D.idx  main.cpp.FC3FA23802FB1EF4.idx
algorithms/sorting/: README.md  a.out  bubble.c  insertion.c  quicksort.c
data_structures/: ClassBinaryTree.hpp  main.cpp
data_structures/lists/: singly.c
data_structures/trees/: avl.c  binary.c
plotter/: CMakeLists.txt  main.c
sorting/: README.md  a.out  quicksort.c
src/: bubble.c  list.hpp  merge.c  sort.cpp  sort.hpp  stack.hpp  tree.hpp
test/: test_sort.cpp  test_stack.cpp  test_tree.cpp
